Docs for coach linking
